--- a/source/_posts/22101702.md
+++ b/source/_posts/22101702.md
@@ -1,10 +1,244 @@
 ---
-title: 关于玩原神需要掌握的学科
-excerpt: 如题目
+title: 高等元素论一
+excerpt: 这篇没有草
 date: 2022-10-17
 categories:
 - 游戏
 tags:
 - 原神
 ---
+
+## 单位元素量与元素附着
+### 单位元素量
+在物理学中，牛顿把质量解释为物质的多少。在原神中为了方便比较元素的多少，我们用“元素量”来表述。同样为了方便研究，我们把一般角色技能拥有的最小元素量定义为1单位元素量。
+
+大佬们经常说的弱元素就是1.0单位元素量，而强元素则有2.0单位元素量。一般角色自带的普攻、重击、元素战技、元素爆发都为弱、强元素，极少数会为超元素，拥有4.0单位元素量（如北斗Q斫雷）。
+
+注：
+- 实际游戏计算上来说，每1单位元素量等于25元素量，但是因为技能本身自带的元素量基本都为25的倍数且实际中用不到这么精确，在此直接化简。
+- 单位元素量只是玩家试图量化元素的一种表述方式，并不代表所有情况下，元素的多少都能用整数单位元素量表示。
+
+### 元素附着
+元素附着，即元素通过一定方式附着在对象上。通常情况下，旅行者们可以通过使用火元素攻击丘丘人，会发现丘丘人头顶会多一个火元素图标，过一段时间火元素图表会闪烁然后消失，我们把这种现象称为“元素衰减(Elemental Decay)”，其本质是元素量随着时间不断衰减至0之后消失。同样，我们把从元素附着产生到元素附着消失的时间称为“元素附着自然持续时间”，简称为“持续时间”。
+
+元素附着持续时间=7s+2.5s * 附着前元素量
+
+从上述公式我们可以看出，弱元素的附着时间为9.5s，而强元素的附着时间则为12s。需要指明是，一般通过元素攻击将无附着的对象变为有附着时，存在元素附着损耗，这个损耗为20%。
+
+![](https://api2.mubu.com/v3/document_image/c992873e-1ba4-43fe-a285-2604e5b401de-3807603.jpg)
+
+注：
+- 角色的元素攻击无法给对象以风、岩属性附着，或者说风元素和岩元素并不存在一般的元素附着形式。
+- 除了角色自身攻击造成的元素附着，对象身上有元素护盾时也会产生元素附着。如果是敌人的护盾，头上会有元素图标。如果是事物的护盾，则头上没有元素图标。大部分元素护盾都不存在元素衰减，丘丘王和雷莹术士的元素护盾则存在衰减。
+- 通过场地效果也可以为自身上元素附着(如班尼特的Q给自身挂火，草萨满的草场挂草)。这些附着存在元素衰减，但是持续时间固定，与元素量无关。相对的，这些附着并无附着损耗，为100%元素量附着。
+- 除元素护盾外，怪物也可以为自身上元素附着（如史莱姆），但是怪物自身元素附着也分为恒常元素附着（如水史莱姆）与可刷新元素附着（如火史莱姆）。
+- 环境效果与场地效果类似，这些附着存在元素衰减，但是持续时间固定，与元素量无关。相对的，这些附着并无附着损耗，为100%元素量附着。详情请见：《元素地脉学》(重制版) - 角色自身附着、环境与敌人的特殊技能、元素增幅器
+
+### 元素附着冷却
+虽然角色的攻击带有元素，但是并不是每次攻击都能产生元素附着，我们把这种现象叫做元素附着冷却。
+
+原神中的元素附着冷却只有一种方式，但是这种方式同时包含按攻击次数冷却和冷却重置。
+
+按攻击次数冷却：最常出现在角色附魔的普攻中，常见形式即每3次普攻元素附着一次。即如果连续不断地攻击，附着情况为XOOXOOXOO，也称为100形式。
+
+冷却重置：也是最常出现在角色的普攻中，常见形式即每隔2.5s普攻元素附着一次。即如果普攻攻击一次附着后，隔2.5s的下一次攻击仍具有元素附着。
+
+以上两者共同作用于角色附魔普攻，以最先结算的那项为准。对于多个怪物，每个怪物单独计算附着CD。
+
+注：
+- 角色的元素战技与元素爆发绝大多数都是没有元素附着冷却的，或者说其元素附着冷却时间远小于其技能施放冷却时间。但是一些角色的普攻可能与技能共享附着冷却，而且计次器是从“第一次命中”开始计时并非“第一次附着”，详细请看：《元素附着论》(重制版) - 附着CD的深层原理 NGA：tesiacoil
+- 凡事无绝对，元素附着冷却为策划的可调整区间。拿胡桃举例，胡桃的连续A重情况下，前置的普攻每三次附着一次（也受计时器影响），但是后置的重击则无附着冷却，可以连续蒸发。
+- 元素附着冷却的本质是一个「限时的计数器」，该计数器具有标签名、有效时间、计数、三种序列这几个属性。①标签。角色的攻击根据标签找到对应的序列，并将该序列的计数+1，找到序列中对应的值。如果不存在角色攻击标签对应的序列，则创建一个序列。②有效时间。每个序列存在一个有效时间，从被生成时开始计时，有效时间耗尽后则该序列失效并被清除，不再存在和作用。清除后若有新的该标签对应的攻击命中，则重新生成一个全新的序列。③计数和序列值。计数不解释。序列包括伤害序列、附着序列、削韧序列，这三个在同一个计数器内同时存在。
+
+## 元素命名法与同元素叠加
+### 元素命名法
+为了更方便的研究元素反应，本文定义了一种方式的元素命名法，为：
+
+**弱/强/超 + 元素种类 + 元素量**
+
+如不研究元素衰减，前置的弱/强/超可以省略不写。
+
+举例：假如我们使用重云冰附魔攻击丘丘人对其施加元素附着，则攻击前为 弱冰1.0 ，由于存在20%的附着损耗，则丘丘人身上是 弱冰0.8 的元素附着。 本质来说，命名法最前边的强/弱并不是指元素的强弱种类，而是指三档衰减速度。
+
+弱元素 1单位元素量
+- 弱档衰减速度 = 1 * 0.8 / ( 7 + 2.5 * 1 ) = 0.0842元素 / 秒
+强元素 2单位元素量
+- 强档衰减速度 = 2 * 0.8 / ( 7 + 2.5 * 2 ) = 0.1333元素 / 秒
+超元素 4单位元素量
+- 超档衰减速度 = 4 * 0.8 / ( 7 + 2.5 * 4 ) = 0.1882元素 / 秒
+
+注：
+- 虽然我们在这里定义了弱/强/超三档附着和衰减速度，但是实际上还有一些特殊情况，其元素量不为1/2/4，衰减速度也不为上述三档，但是大多数都可以归到上述三类。
+- 如果你看完本文再回来看最初，会发现利用扩散反应几乎可以产生几乎无数种元素量的初始元素状态，这里的定义是为了方便最初理解。但是所有的条件都符合元素衰减公式，即元素附着持续时间 = 7s + 2.5s * 附着前元素量。
+
+### 同元素附着叠加
+当用相同元素给已经被施加相同元素的对象施加元素附着时，同样存在20%的附着损耗，这种现象被称为同元素叠加。同元素叠加的规律可以用一句简单地话来总结：
+
+同元素附着叠加，衰减速度继承，元素量取两者最高。
+
+例子：
+- 用弱冰1.0去叠加弱冰0.5，则前者计算附着损耗后为弱冰0.8，0.8与0.5取两者最高值0.8，则叠加后为弱冰0.8，自叠加时元素附着持续时间为0.8/弱档衰减速度=0.8/0.0842=9.5s
+- 用弱冰1.0去叠加强冰0.5，则前者计算附着损耗后为弱冰0.8，0.8与0.5取两者最高值0.8，则叠加后为强冰0.8，自叠加时元素附着持续时间为0.8/强档衰减速度=0.8/0.1333=6.0s
+- 用弱冰1.0去叠加强冰1.2，则前者计算附着损耗后为弱冰0.8，0.8与1.2取两者最高值1.2，则叠加后为强冰1.2，自叠加时元素附着持续时间为1.2/强档衰减速度=1.2/0.1333=9.0s
+
+## 元素反应基本特征
+### 元素反应的基本特征
+在原神中，我们可以使用触发元素与目标身上的附着元素进行元素反应。附着元素一般为先手元素，即先存在于目标身上的元素，触发元素一般为后手元素，即作用于目标产生元素反应的元素。元素与元素之间按照一定的比例消耗进行元素反应，大致有三个非常重要的结论。
+1. 元素衰减存在于元素附着和元素反应的全程，后手元素如果不产生元素附着，是没有20%的附着损耗的，即100%元素量参与元素反应。
+2. 元素之间按照一定的比例消耗进行元素反应，如果先手元素比较多则元素反应后会残留先手元素。但是如果后手元素比较多，仍然不会残留。即“后手元素无残留”（感电反应除外）
+3. 元素反应的计算过程取值取触发元素的角色的元素精通。
+
+关于元素反应的CD，“元素反应没有CD，元素附着有CD”这种说法是有一定局限性的。准确来说，角色自身的元素附着同时存在按攻击次数冷却和冷却重置，这是元素附着CD导致的元素反应CD。但是在怪物身上存在剧变反应计次器，虽然可以短时间内触发剧变反应，但是短时间内作用于怪物身上的同类元素剧变反应的伤害数值是有次数限制的，削韧数值和附着数值则没有。对于超导、扩散和碎冰这三种反应，在0.5秒内只能造成2次伤害。对于超载和感电这两种反应，在0.5秒内只能造成1次伤害。
+
+注：
+- 元素反应需要不同的元素来触发，但是并非所有的不同元素之间都能反应。比如风和岩、冻元素与水、冰，草元素与水、雷、冰之间皆不能反应。
+- 触发反应的和受反应影响的目标同源，大部分反应不会受到伤害。
+- 一些单位或单位的技能存在元素免疫，即使施加两种不同元素附着仍不能进行元素反应。
+- 参与反应的元素如果为角色自身附着（比如芭芭拉的水环）或环境元素（比如海水），这些元素并无附着损耗，为100%元素量附着元素，参与元素反应也是100%元素量参与。
+
+### 元素克制关系和消耗比例
+在元素反应的过程中，触发元素会与附着元素以一定的比例消耗进行元素反应，如果这个比例为1:1，则称两元素之间无克制关系。当两种元素存在克制关系时，克制元素：被克制元素=1:2。元素反应克制关系如下所示：
+- 水克制火，则水：火=1:2
+- 火克制冰，则火：冰=1:2
+- 水/雷/冰/火克制风/岩，则水/雷/冰/火：风/岩=1:2
+- 其余情况如能反应，反应消耗元素量比例均为1:1，互不克制。
+
+注：
+- 本文所讲一切元素反应及克制关系仅针对元素反应，元素护盾的破盾效率、破盾方式与元素反应的克制关系存在一定差别，并不完全相同。详情请看：《普通破盾学》 NGA：shallow夢
+- 从上述克制关系就可以看出来，为啥即使有冰行秋与迪卢克相性也未必好。因为水行秋与迪卢克是弱水0.8与弱火1.0以1:2进行反应，残留弱水0.3的水元素。但是冰行秋与迪卢克是弱冰0.8与弱火1.0以2:1进行反应，元素反应直接无残留（后手元素虽然反应剩余，但是后手元素无残留），会把冰元素清掉同时火元素也不残留。
+
+## 不同类型元素反应的特征
+### 增幅反应、剧变反应与结晶反应（不含感电反应）
+在我们理解上述元素反应机制后，已经可以对一些基本的元素反应情况进行计算，以下举几个例子。
+
+例：
+- 超导反应中，强冰2.0附着后为强冰1.6，自然衰减至强冰1.4与触发元素弱雷1.0进行反应。由于两者互不克制，则以1:1比例进行反应，反应后残留强冰0.4。则反应后冰元素附着持续时间 = 0.4 / 强档元素衰减速度 = 0.4 / 0.1333 = 3s。
+- 融化反应中，强冰2.0附着后为强冰1.6，自然衰减至强冰1.4与触发元素弱火1.0反应。火克制冰，则以1:2比例进行反应，此时元素无残留。但是如果是强火1.4与触发元素弱冰1.0进行反应，则残留强火0.9。则反应后火元素附着持续时间=0.9 / 强档元素衰减速度 = 0.4 / 0.1333 = 6.75s。
+- 结晶反应中，弱冰1.0附着后为弱冰0.8，自然衰减至弱冰0.7与触发元素弱岩1.0进行反应。由于岩被冰克制，则以1:2比例进行反应，反应后残留弱冰0.2。则反应后冰元素附着持续时间 = 0.2 / 弱档元素衰减速度 = 0.2 / 0.0842 = 2.375s。
+
+### 感电反应
+感电反应的机制比较特殊，在感电反应中触发元素也进行元素附着，双元素互不克制但共同附着。在双元素附着衰减的过程中约间隔1s触发一次感电反应，每次感电反应消耗0.4各元素单位元素量，直至一方或双方元素量变为0。在这个过程中，即使其中一方元素量小于0.4，也能触发最后一次感电反应，之后该元素消失。需要注意的是，两元素的元素衰减始终存在，千万别忘了考虑。
+
+例：
+- 弱水1.0附着为弱水0.8，自然衰减至弱水0.6与弱雷0.8进行感电反应(此时雷元素也有附着损耗)，则第一次感电结算后残留弱水0.2与弱雷0.4。弱水0.2附着时间为0.2/弱档衰减=0.2/0.0842=2.375s。则1s后弱水0.1158与弱雷0.3158进行感电反应，各减0.4元素量，直接反应无元素残留。
+
+注：
+- 从上述可以看出感电反应特性与其他元素反应不同，我们称之为不完全反应。即其他类型元素反应一定是一瞬间进行结算，但是感电反应是有时间间隔的连续结算。
+
+### 冰元素与冻元素、冻结与碎冰反应
+在了解冻结反应与冻结状态的性质之前，需要介绍冰元素和冻元素这两种“兄弟”元素。冰元素，一般出现于角色或敌人的元素攻击；冻元素，一般出现于冻结状态或敌人的“冰”盾(以下简称冻盾)。这两种元素的性质基本相同，例如冻元素也克制风/岩，也被火克制。但在一些方面，这两种元素存在差异。以下是对应的区别：
+1. 两种元素的图标不同。在游戏中，两种元素的图标也做了一定的区分。冻元素的图标相比冰元素的图标，在周围多了淡蓝色的光晕。
+2. 与水的反应性质不同。因为冰元素与水元素能反应，冻元素与水元素和冰元素都不反应，所以会出现类似感电状态的元素共存状态，即冰冻共存或水冻共存的状态。此时，对应的冰元素或水元素，也被称作“藏元素”。若敌人身上存在对应的共存状态，只会显示冻元素图标，冰元素或水元素的图标会被隐藏。
+
+![](https://api2.mubu.com/v3/document_image/92ae3cd1-4a77-4b5d-b4bf-8ad6a05536a4-3807603.jpg)
+
+冻结反应会给角色或敌人生成冻结状态，并带上一定量的冻元素。
+
+冻结状态的元素量 = 2 × 元素反应量
+
+冻结反应的元素反应量为触发元素和附着元素中元素量低的那一个。
+
+目前没有统一的结论，除了梦佬提出的式子，Keqing Mains上的srl也提出基于测试结果的一个公式：
+
+y = 2 * ( 5 * 冻元素量 + 4 ) ^ ( 1 / 2 ) - 4
+
+碎冰反应能对冻结状态的元素量造成影响，触发一次碎冰，就会减少8冻元素量。
+
+当前版本内，碎冰反应存在最低碎冰阈值，当冻元素量小于约0.5-0.6时便无法触发碎冰反应，只会扣除冻元素量而无动画与伤害。关于冻结反应中冻元素、藏元素与第三元素的触发规律，放到下边的冻结反应中的三元素反应进行介绍。
+
+### 扩散反应
+在扩散反应中，我们称与风元素发生反应的元素为附着元素，也称被扩散元素，由发生反应的目标向外传播的元素为扩散元素。（当然一般为同种元素类型，但是两者元素量不同）。因为风元素被火/雷/水/冰克制，所以风元素与这些元素反应消耗元素量比例为2 : 1。以下为几个重要的结论：
+
+被扩散元素量 ＞ 0.5倍风元素量，则弱风1.0触发的扩散元素量为2.2，强风2.0触发的扩散元素量约为3.45。
+
+被扩散元素量 < 0.5倍风元素量，则扩散元素量为1.25 * 被扩散元素量 + 0.95，此时扩散元素量与触发元素风元素的强弱无关
+
+![](https://api2.mubu.com/v3/document_image/4bc367c6-42e2-4fce-895e-9893a467c822-3807603.jpg)
+
+例：
+- 弱水1.0附着变为弱水0.8，自然衰减至弱水0.6与弱风1.0进行反应。由于存在元素克制，消耗比水：风=1:2，则反应剩余弱水0.1。同时产生扩散元素[2.2]水2.2。注意！此时产生的扩散元素衰减速度不为弱/强/超三档之一，所以无法使用三档前缀，但是其衰减速度符合 元素附着持续时间 = 7s + 2.5s * 附着前元素量 公式。在这里把他们简单描述为[2.2]水2.2，其实按这种描述，弱冰1.0为[1.0]冰1.0，强火2.0为[2.0]火2.0，本质是描述元素衰减速度。
+- 弱水1.0附着变为弱水0.8，自然衰减至弱水0.6与强风2.0进行反应。由于存在元素克制，消耗比水：风=1:2，则反应无残留。同时产生扩散元素量 = 1.25 * 0.6 + 0.95 = 1.7。则产生扩散元素[1.7]水1.7。
+
+扩散反应小常识：
+1. 翠绿4的减抗效果对被扩散目标是先减抗再计算伤害，对于扩散传播的目标是先计算伤害再减抗。
+2. 翠绿4的减抗效果需要风元素角色在前台触发。
+3. 扩散水元素只会对被扩散目标造成水元素扩散伤害，对于扩散传播的目标只造成水元素附着而不造成伤害。
+4. 同种技能类型触发的扩散反应0.5s内最多吃两次伤害，这也是为什么我们常说双目标扩散，因为三目标扩散也是吃两次扩散伤害。
+5. 扩散反应伤害可以触发增幅反应，即蒸发/融化，同时此伤害也吃元素精通，扩散触发的增幅为快照机制。
+6. 当同时扩散的两种不同的扩散元素附着在同一目标时，不会触发感电反应，触发的增幅反应也只是没有倍率加成但也有基础伤害。但是超载，超导可以正常触发并造成伤害。
+
+## 复杂条件元素反应
+### 感电反应中的三元素反应
+感电反应为水雷共存状态，其中水/雷元素与其他元素进行反应时，会优先消耗雷元素。如果雷元素被消耗完毕触发元素仍有剩余，则可以继续与水元素进行反应。
+
+四个感电反应小知识：
+1. 如果雷元素不足量，风元素与雷元素反应触发扩散后可以继续与水元素反应触发第二次扩散，一次为雷元素扩散伤害，一次为水元素扩散伤害。如果触发角色装备翠绿4，则会同时减水雷双抗。
+2. 火同时触发超载与蒸发，则本次超载享受增幅反应加成，按增幅的提升倍率提升。
+3. 冰同时触发超导与冻结时，不会造成超导伤害，但是可以正常冻结。
+4. 使用岩元素与水雷共存状态目标进行反应时，无论雷元素是否足量，都只产生雷元素晶片。
+
+例：
+- 水雷附着后，弱水1.0 + 弱雷1.2 与弱火1.0反应，雷与火互不克制以1 : 1反应，则只触发超载，反应后元素残留为弱水1.0 + 弱雷0.2。
+- 水雷附着后，弱水1.0 + 弱雷0.8 与弱火1.0反应，雷与火互不克制以1 : 1反应，则触发超载后剩余弱火0.2继续与弱水1.0反应，水克制火，反应消耗比为1:2，反应剩余弱水0.9。所以本次反应同时触发超载与蒸发，目前身上元素残留弱水0.9。
+- 水雷附着后，弱水1.0 + 弱雷0.8与强冰2.0反应，雷与冰互不克制以1 : 1反应，则触发超导后剩余强冰1.2，水与冰互不克制以1:1反应，则触发冻结后元素残留冻2.0与藏强冰0.2。（冻元素=2倍的冻结反应消耗量）
+
+### 冻结反应中的三元素反应
+冻结状态下单位仍可被附着有水/冰元素(反应残留或反应后新的附着)，称这种元素为藏元素，同时称冻结元素为冻元素。当藏元素与冻元素同时存在时，与其余几种元素发生反应存在以下几条规律。
+1. 碎冰反应优先于其他反应
+2. 风优先反应藏元素
+3. 火和雷优先反应藏冰元素其次是冻元素
+4. 先反应藏元素的情况，不足的量会由冻元素补充反应。先反应冻元素的情况，不足的量不会由藏元素补充反应。
+
+(冻结状态，先消耗藏元素可以进行两次反应，但是先消耗冻元素只能进行一次反应。岩元素会优先碎冰后结晶藏元素，水冰仍可补充冻结，这两种情况单一，不再单独纳入规律中)
+
+规律解读：
+1. 游戏中部分攻击方式可碎冰的同时带有元素，例如迪卢克的e。此情况下的攻击会先判定碎冰，之后再判定其他元素的情况。例如迪卢克e攻击一带有藏水元素的冻结单位，会触发碎冰+蒸发。
+2. 扩散会优先消耗藏元素，详细内容在规律四解读。
+3. 火和雷会优先判定发生融化/超导反应，并且优先级藏冰>冻元素。例如对藏水的冻结单位用雷，会和冻元素触发超导，而不触发感电。再比如，对藏冰元素的冻结单位用火，会先消耗藏冰，不足的部分用冻元素补足，而造成只触发一次融化但消耗两部分元素的效果。
+
+例：
+1. 用弱火1.0触发藏冰的冻结单位，其中藏冰元素量为0.4，冻元素量足量，根据规律③弱火1.0会优先和藏冰反应，因为火克制冰，消耗0.4藏冰只需0.2火元素，剩余的弱火0.8则会与冻元素反应。
+2. 用弱风1.0扩散有藏水的冻结单位，其中藏水元素量为0.3，冻元素足量，根据规律②风会先和藏元素反应，由于风被冰/水克制，消耗0.3的藏水需0.6的风元素量，剩下的0.4风元素量会再消耗0.2的冻元素。
+3. 用强雷2.0触发有藏水的冻结单位，其中冻元素量为1，藏水元素量无所谓，根据规律三类优先与冻元素反应，消耗完冻元素后单位解冻，尽管还剩余1的雷元素，也不会与藏水反应。
+
+### 多目标同时扩散
+同时扩散指的是对单个目标的元素共存或多个有元素附着的目标，使用风元素触发扩散反应，将元素传播给另一之前不被元素附着的新目标的现象。当扩散元素遇到其他附着元素时，会进行元素叠加（同元素时）或进一步触发元素反应（异元素时），多色扩散符合几个规律：
+1. 目标身上多个元素两两反应，没有明确优先级
+2. 两两反应的元素，都是扩散元素时，不会造成反应伤害，只会造成无感电的雷水共存、冻结。
+3. 元素会按元素克制进行反应消耗再进行附着，因此最终附着的元素只取决于具体元素的顺序和克制消耗关系以及元素量
+
+关于元素转化，某些风元素技能可以沾染其他元素进行元素转化，当同时存在多种元素可以被转化时，转化优先级为：
+- 旅行者(风)的元素转化优先级为：冰(冻)>火>水>雷
+- 其他风元素角色的元素转化优先级为：火>水>雷>冰(冻)
+
+扩散反应小常识(复读)：
+1. 扩散水元素只会对被扩散目标造成水元素扩散伤害，对于扩散传播的目标只造成水元素附着而不造成伤害。
+2. 同种技能类型触发的扩散反应0.5s内最多吃两次伤害，这也是为什么我们常说双目标扩散，因为三目标扩散也是吃两次扩散伤害。
+3. 扩散反应伤害可以触发增幅反应，即蒸发/融化，同时此伤害也吃元素精通，扩散触发的增幅为快照机制。
+4. 当同时扩散的两种不同的扩散元素附着在同一目标时，不会触发感电反应，触发的增幅反应也只是没有倍率加成但也有基础伤害。但是超载，超导可以正常触发并造成伤害。
+5. 不同扩散触发的相同超载反应，算作同一角色触发的同一超载反应。意思是同时扩散火和雷，会触发两个超载，但怪只会受到一个超载伤害
+
+注2：shallow夢与tesiacoil针对两元素同时被扩散附着到已挂有某一元素的单位的扩散情况先后顺序做了猜测，被扩散元素优先与克制元素进行结算，其次是被克制元素，最后是无克制关系的元素。无克制元素之间的反应顺序，很可能与转化优先级有关系，为火>水>雷>冰。
+
+### 破盾相关引导
+在原神中怪物护盾的削减方式为 元素反应消耗+伤害转化(护盾吸收)+削韧转化(碎冰/破岩等)。其中伤害转化又包括非增幅部分伤害转化与剧变反应伤害转化。元素消耗、元素克制与元素反应略有不同，且因敌人类型的变化而变化。在此不做过多的阐述，详情请看《普通破盾学》。
+
+## 参考链接
+B站和泥潭真是人才辈出
+[《高等元素论》综述，向着天空岛与世界树！](https://www.bilibili.com/read/cv12175592)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
