--- a/source/_posts/22102001.md
+++ b/source/_posts/22102001.md
@@ -1,3 +1,12 @@
+---
+title: 高等元素论二
+excerpt: 这篇有草，激化，绽放，燃烧，全文搬自泥潭老哥原文，泥潭的老哥是真强
+date: 2022-10-20
+categories:
+- 游戏
+tags:
+- 原神
+---
 
 ## 草元素的多元素反应
 雷草反应，是围绕着激化状态的种类做展开的(详见《雷草篇》6，激元素的性质及激化状态的种类)
@@ -146,6 +155,163 @@
 以0命万叶-----精五草木刀为例，可以为队伍提供
 聚怪，辅助挂雷，群体上原激化，减雷抗，加雷伤，搭配原木刀的充能以及给主C提供120精通直接做到伪2命
 理想情况下，可以最初没有额外伤害的原激化交给万叶完成(主要指群体挂激化，因为目前可以对群怪群体施加激化状态，需要群体范围雷伤)，雷系/草系输出一开始的伤害就是超激化/蔓激化。同时万叶，也可以依靠自身超激化，使得万叶在一轮输出中轻松打出20w+的伤害(考虑单双扩)，这个伤害已经不输常规的祭礼行秋，西风夜阑，等副C在其他队伍的输出。
+
+## 水草篇
+### 绽放反应简述
+水草反应中，水是被克制方。如1元素草消耗2元素水，1元素水消耗0.5元素草，发生绽放，生成一颗种子。单个怪物/角色，单次结算至多产生一颗种子。种子存在上限为5颗。种子多于5颗，会使得产生较早的种子直接引爆，使种子数量维持在5颗的上限。
+种子在无火/雷影响下，种子会在6s后爆炸。爆炸造成草元素伤害，无草元素附着。
+种子存在期间遇到元素量不为0的雷/火攻击(超绽放/烈绽放的触发条件看《雷草篇》4.1触发超激化/蔓激化的条件)，可提前引爆种子，造成更高伤害的超绽放/烈绽放。爆炸造成草元素伤害，无草元素附着。
+
+### 绽放的伤害
+绽放的伤害吃，后手，打出该次反应角色的实时精通
+
+单次绽放伤害=(绽放基础伤害)*抗性
+原绽放的伤害=(等级系数*2*[1+(16*精通)/(精通+2000)+反应系数加成])*抗性
+超绽放的伤害=(等级系数*3*[1+(16*精通)/(精通+2000)+反应系数加成])*抗性
+烈绽放的伤害=(等级系数*3*[1+(16*精通)/(精通+2000)+反应系数加成])*抗性
+(等级系数详见《雷草篇》5，超激化/蔓激化的伤害)
+无论敌人/角色触发，种子对角色的绽放基础伤害仅生效5%，对敌人的绽放基础伤害为100%
+
+无论是原绽放，还是超绽放，烈绽放，每0.5秒内，角色自身或敌人至多收到2次伤害。
+
+### 原绽放产生的种子的机制
+![](https://api2.mubu.com/v3/document_image/749760af-fd79-43c3-95d1-b7d3248e2f1a-3807603.jpg)
+
+绽放产生的种子，本身也是受击单位，可以档火/雷弓箭弹道，触发烈/超绽放。可以被一些自动索敌的攻击例如杀生樱，奥兹攻击。但是无法被角色的手动攻击自动索敌。
+
+种子自身以及种子周围小范围内存在的敌人，受到元素量不为0的雷/火攻击，就可以产生，超/烈绽放。这个范围由于没有具体数据，大概是1-1.5丘丘人的身位。
+一般情况下，只有胡桃等角色，单独对种子物理平A，后开E，继续平A，无法打爆种子。
+其余情况，种子都是一碰就爆。所以不同担心。
+
+种子可以被风场牵引
+
+种子被角色打出超绽放，优先锁定范围内距离最近的敌人；敌人打出的超绽放，优先锁定范围内距离最近的玩家角色。
+(索敌范围为，半径和高均为15米的圆柱体[来源t佬])
+
+### 水雷+草的特殊反应顺序
+该反应有具体的步骤，按照步骤执行即可。
+步骤一，水雷和草反应
+草元素优先和雷元素反应，发生原激化，产生激元素。
+草不过量，优先发生原激化，产生激元素，进入第二步
+过量草元素继续和水元素反应，发生第一次绽放。绽放后无水元素残留，则反应停止；
+绽放后仍有水元素残留，进入第二步
+
+步骤二，激元素和水反应
+如果第一步，草不过量，草元素不足以和水元素反应。但是激元素仅和水元素反应，会发生第一次绽放。
+如果第一步，草过量，且第一步有水元素残留。第一步产生的激元素，会继续和水元素反应，发生第二次绽放。
+
+注意“水雷+草”反应中，设计到，激元素+水元素反应的原绽放伤害，吃的依旧是草角色的精通
+
+### 关于扩大绽放的伤害的做法
+(此处编辑时间为2022/9/19，B站和各大潭友也有讨论，所以补写一处)
+上述的“水雷+草”是一种方法
+原理是优先利用雷草反应，将草元素转化为“激元素+草元素”，在大多数情况下，做到至少2次绽放判定。产生多倍的种子数量。
+只有当“激元素有残留时”，继续加水，此次伤害吃水角色的精通。普通的由草角色触发的“初步草+水反应”，还是“进一步的激+水反应”，原绽放统统吃草角色的精通。
+注意此时草角色必须为后手挂草，队伍不以“激化反应”为主要增加队伍输出的手段。实战中，可以使用，双水+雷+草，双雷+水+草，雷+水+风+草。这种的集，感电，绽放，激化，于一身的变种武装队。
+其次是“草冰/激冰共存+水”
+原理是，水优先和冰反应，冻结后所剩无几的水元素继续和草反应，使得每次消耗微量的草。因为“单次结算至多产生一颗种子”，每次消耗微量的草，就会使得草元素有更高效的利用。但是这种队伍的玩法尚待开发。
+
+此处参考文献：
+[冰雷元素促进原绽放的案例](https://bbs.nga.cn/read.php?tid=33539848&rand=427)
+[激化护草机制与超绽放](https://bbs.nga.cn/read.php?tid=33484573)
+
+## 火草篇
+### 名词解释
+#### 燃元素
+全称“燃火元素”，还有别称“火壳子”，都是指这个东西。用来维持燃烧的元素
+燃元素，是一种特殊存在且独立的火元素。燃烧开始时，便会凭空产生；燃烧结束时，也会凭空消失。
+其表现形式为：燃烧的火元素图标
+其主要作用为：维持燃烧状态
+其基础性质为：可以直接参与其他火系相关反应
+
+#### 燃烧攻击
+燃烧反应自开始时，每0.25秒就会对目标造成一次燃烧攻击。即为对目标造成挂火和伤害，可以把它想象成一个定期普攻的“烟绯”，每0.25秒对目标打一次普攻。每次都有火元素伤害，但不见得每次都能施加元素量(就是所谓的挂火)。只有等挂火CD转好了，才会有挂火。
+简单理解：燃烧攻击，有挂火，还有伤害。相当于法器角色的普攻。
+
+#### 强衰减，弱衰减，自衰减
+常规元素的衰减速度公式
+为
+衰减速度=0.8×元素量/(7+元素量×2.5)
+
+元素量特定为1，即为弱元素，对应的速度为弱衰减
+元素量特定为2，即为强元素，对应的速度为强衰减
+元素量为其他数时，主要由风扩散火元素挂火，元素量不固定，不同的元素量对应的速度为，该元素量的自衰减
+
+### 事前提要
+经过tesiacoil和shallow夢的证实，官方在3.0版本更改了，火元素的叠加机制，将原本的“量多则覆盖，衰减速度不覆盖”，更改为“量多则覆盖，伴随着衰减速度一同覆盖”
+例如，
+原本的，弱火+强火------强火弱衰减；强火衰减至0.8元素量以后+弱火------弱火强衰减
+现在的，弱火+强火------强火强衰减；强火衰减至0.8元素量以后+弱火------弱火弱衰减
+叠加原理等同于“激元素”
+注意：只有火元素的叠加有更改，其余的元素均无更改。
+
+### 燃烧反应简述
+(不好理解的话可以看大白话版本)
+草/火元素，一旦初次接触，无关先后顺序，都可以发生燃烧反应。燃烧反应类似于感电反应，火/草元素均为附着元素，为0.8max。
+燃烧反应中，会凭空产生一个用来“维持燃烧反应”的燃元素。
+有“燃元素”和“草元素”就会发生燃烧。
+“初始的火元素”仅作为触发燃烧的初始条件，燃烧过程中有没有“火元素”，并不影响燃烧过程。
+感电有水雷共存，同理，燃烧实际上是燃(火)草共存
+即为，燃元素+火元素+草元素，三者共存
+当“火元素”没了，燃烧仍然可以继续，此时为燃元素+草元素，两者共存
+
+所以下文中的“燃烧状态下的火草共存”实际为，燃元素、草/激元素共存，或燃元素、火元素、草/激元素共存
+“非燃状态下的火草共存”实际为，火元素、草/激元素共存
+
+燃烧反应只要进行中，从开始的那一刻算，每0.25秒会对目标造成一次燃烧攻击。单次攻击对范围内未处于挂火附着CD的目标，施加的元素量为1.0，以及造成一次燃烧伤害。对于燃烧反应目标，此次施加的火元素仅作为附着元素，附着0.8元素量的火元素。即为弱火附着。燃烧施加元素量的附着限制为(2秒的计时器)
+燃烧攻击，对目标施加的火元素量，会叠加至初始的火元素中，叠加规则，等同于激元素的叠加。即为“量多则覆盖，伴随着衰减速度一同覆盖”的规则。
+
+### 燃烧反应简述，大白话版
+火元素和草元素初次接触，就是用火源点燃燃料；燃料燃烧后，酒精就会自己烧起来，就会产生用来维持燃烧的火--燃元素。火源只用来点燃燃料就行啦。燃烧开始之后，火柴拿不拿走不影响燃烧的进行。分别对应“火燃草，三元素共存”和“燃草，双元素共存”。
+你用喷枪(强火)点燃酒精灯，还是用火柴(弱火)点燃酒精灯，点着后，火(燃元素)依旧是那么大，酒精该怎么消耗就怎么消耗，对应后文中“燃元素的量固定2.0”和“草元素的燃烧消耗速度固定0.4元素量/秒”。
+燃烧开始后，只要有酒精和酒精灯上的火，燃烧就会持续进行。对应后文“燃烧状态共同靠“燃元素”和“草元素”维持”
+灭掉燃烧的酒精灯(终止燃烧反应)，只需要用酒精灯帽盖灭酒精灯上的火(燃元素)就行了，不用管火源(不和酒精灯接触)和酒精是否有剩余，对应后文中“灭掉燃元素即可做到非燃状态下的火草共存”
+
+现实中，酒精灯的燃烧会持续的发光发热；但是在游戏中，为了还原现实，将这一步表现为，每0.25秒造成一次“燃烧攻击”
+唯独不一样的地方是：“燃烧攻击”的对目标施加的元素量(挂火)，会补充至火元素的量
+
+### 燃烧反应时各元素量的变化
+燃元素是凭空产生的，不消耗任何火元素和草元素。
+燃烧反应过程中，
+火元素正常衰减，草元素停止衰减
+但以特定的燃烧速度被消耗
+
+草元素的燃烧消耗速度固定
+为：0.4元素量/秒
+
+### 草元素的燃烧消耗速率具体公式
+目前已知最快的草元素的自然衰减，为草萨满的挂草。单次挂草直至累积到1.6元素量，衰减时长8秒，衰减速度0.2元素量/秒。对应的草元素燃烧消耗速度也只能达到0.4元素量/秒，所以可以认为，目前游戏中所有的燃烧，任何草元素的消耗速度均为0.4元素量/秒
+
+![](https://api2.mubu.com/v3/document_image/ca733795-9cdc-450e-9603-46ce3ccc340e-3807603.jpg)
+
+每0.25秒，燃烧反应会做成一次“燃烧攻击”，给未处于挂火附着CD的目标施加火元素量，造成燃烧伤害。即为1秒产生4次伤害，结合每秒消耗0.4元素量的草
+可以认为，每0.1元素量的草元素，可供给一次燃烧，产生一次伤害
+
+### 燃烧次数的例子
+0.8元素量的草
+可供燃烧次数为8次，不过实际情况和理论会因卡肉等不可控因素，存在部分误差，多数燃烧次数为7次，少数情况下，燃烧次数则达到理想值，为8次。
+一般单轮弱草燃烧，对于燃烧受击目标，只有第一次的燃烧攻击可以挂的上火，其余燃烧攻击的挂火均处于挂火附着CD期间(具体的图解详见4，燃烧反应的过程的图解),无法施加元素量。
+0.1元素量的草
+可供燃烧次数为1次。
+0.05元素量的草
+元素量不满0.1，不足以供给一次燃烧。反应只有“燃烧”字样，而无燃烧伤害。
+
+当初始的火元素的量未衰减至0.8量前，燃烧攻击施加的元素量，作为附着元素补充而来的0.8的火元素量，并不影响之前的火元素的量和衰减速度。
+当初始的火元素的量衰减至0.8量后以及衰减或被其他元素反应完后，燃烧攻击施加的元素量，作为附着元素补充而来的0.8的火元素量，会使之前的火元素的量回到0.8元素量。衰减速度更改为弱衰减。
+即为“量多则覆盖，伴随着衰减速度一同覆盖”
+
+### 燃烧反应的过程
+首先，对于绝大多数反应，为先消耗/补充元素，再造成伤害，最后显示伤害数值(该理论由B站晓临小林提出，文章开头有链接)。
+通过不断实测验证发现，对于燃烧反应，存在更为简单且通用的理论。
+燃烧反应过程中的挂火和伤害，并不是同步的，可以粗略认为先有挂火(对目标施加火元素量)，后有伤害(燃烧产生的伤害)。这个过程耗时约0.15~0.25秒，即为处理燃烧反应到最终显示伤害的时间(以下简称“处理时间”)。对于大部分反应，其实均存在“处理时间”，也就是反应的过程有顺序。只是燃烧反应较为复杂，其时间较长，长到可以用肉眼看出区分。
+
+燃烧过程的简化概念图如下
+
+
+
+
+
+
 
 
 
