--- a/source/_posts/22102001.md
+++ b/source/_posts/22102001.md
@@ -307,6 +307,100 @@ tags:
 
 燃烧过程的简化概念图如下
 
+![](https://api2.mubu.com/v3/document_image/a1fc8ab3-17e9-42e0-a7ad-f6020ba90f74-3807603.jpg)
+
+大白话版本：燃烧反应开始后，每0.25秒就有一次燃烧攻击，燃烧攻击的“挂火”和造成伤害之间的时间差，就是“处理时间”，先有“挂火”，后有伤害。所以说，只有燃烧反应开始后，第一次看到伤害数值，是首次“燃烧攻击”的0.25秒，加上第一次处理时间，总耗时约0.45秒。但随后每0.25秒，都会看到一次伤害数值。(参考图解)
+第X次燃烧出伤的时间=0.25 X+(0.15~0.25)
+所以，重置“处理时间”和出现“燃烧”字样也是触发新的燃烧反应的标志现象。
+
+### 关于燃烧图标敌我不同表现的说明
+“燃烧的火元素图标”是燃元素的表现形式。在敌人头上燃烧时为“燃烧的火元素图标”，在玩家角色身上，血条上方显示为“燃(火)草共存的双图标”。
+其实在敌人头上触发燃烧后，会在燃烧之初发生一个强制动画，动画内容为“火图标+草图标”→“燃烧的火元素图标”。实际上仍为燃(火)草共存。
+注意，动画是强制的，如果说敌人的草元素量残留较少，触发了燃烧。只要发生了动画，动画停止之前，哪怕燃烧反应已经结束，动画也不会停止。所以，通过动画去判断草元素是否消耗完，是不准确的。
+如果说你要详细测试，建议用玩家角色自己身上的附着，或者直接看BOSS怪血条下的附着，较为准确
+
+### 燃元素的性质与燃烧状态的决定因素
+燃元素在燃烧之初，凭空产生；燃烧结束，也会凭空消失。
+每次燃烧产生燃元素的量，无论任何情况，均固定2.0元素量。其量不会自然衰减，也不会自然增加。
+燃元素，可以直接参与其他火系相关反应。
+燃烧状态共同靠“燃元素”和“草元素”维持。
+如果燃元素存在期间，被其他元素反应后，该剩多少，就剩多少。燃元素如果被其他元素反应没了，燃烧立刻停止。
+“草元素”如果消耗殆尽，燃烧立刻停止，燃烧结束，燃元素也会随之消失。
+燃元素存在期间，额外加入火/草元素，燃元素的量不可以被补充，原先燃元素剩多少，额外加入火/草后依旧剩多少，直至单次的燃烧状态结束。
+
+### 燃烧反应的伤害判定
+当前燃烧伤害=(当前燃烧对应的燃烧基础伤害)*抗性
+燃烧基础伤害=(等级系数*0.25*[1+(16*精通)/(精通+2000)+反应系数加成])
+(等级系数详见《雷草篇》5，超激化/蔓激化的伤害)
+
+最后的燃烧是谁打出来的，就吃谁的精通。燃烧和感电反应一样，为快照类型的剧变反应。燃烧伤害一旦打出来，伤害就是恒定的，中途提升触发燃烧反应角色的精通，不会提升燃烧伤害。
+触发新燃烧：会出现“燃烧”字样，第一次出伤时间约为0.45秒；随后每0.25秒出伤一次。伤害吃后手触发角色的精通。
+刷新燃烧：燃烧反应过程中，额外加入其他元素量不为0的火/草元素，可以刷新燃烧的伤害，将燃烧伤害对应的精通刷新为，额外加入火/草元素角色的精通。“刷新燃烧”不同于“触发的新燃烧”。刷新燃烧不会重置“处理时间”，也不会更改燃元素的量，只是单纯刷新燃烧对应的伤害。上一次燃烧出伤0.25秒后，依然可以出现下一次燃烧伤害。
+角色处于后台不会继续受到燃烧伤害。
+燃烧攻击是范围攻击，燃烧攻击会对范围内的所有造成伤害和对未处于挂火附着CD的目标施加火元素量。
+表现形式上为，当燃烧受击单位每受到一次燃烧攻击，在这个范围内的其他单位，均会受到等频率的燃烧攻击，对应也受到等频率，等额燃烧基础伤害的伤害。
+
+### 燃烧的伤害半径，削韧，冲击
+![](https://api2.mubu.com/v3/document_image/7cfe5416-208e-4986-a1e9-863a7feee4ca-3807603.jpg)
+
+### 额外加火/草，刷新燃烧的特殊例子
+常规的，由角色的技能/普攻刷新的燃烧伤害的例子，这里直接忽略啦。
+其余的有角色/怪物触发的，特殊例子：
+可以刷新燃烧伤害：
+1，角色的自挂火，例如班尼特Q，辛焱E
+2，怪物的自挂火，例如火骗骗花放大招的前摇
+不可以刷新燃烧伤害：
+1，燃烧攻击的挂火
+2，草萨满的挂草
+
+### 火草共存状态下，同其他元素的反应
+在燃烧反应过程中，
+火元素和燃元素，都可以直接参与其他火系相关反应。反应中，二者共同消耗，比例为1 : 1。
+火草/激共存期间
+加入非火草的其他元素，均优先和火元素和燃元素反应，过量其他元素继续和草/激元素反应
+非燃状态下火草/激共存，加入火/草，均可再次触发燃烧
+(草系所有的多元素反应汇总在《草元素的多元素反应》)
+
+**燃烧+甘雨/温迪例子**
+对于弱火+弱草触发的燃烧，温迪E强风扩散，强风总计可以消耗约1.0的火和1.0的燃，原有的火元素最多仅有0.8，可以直接消耗完。一般温迪触发的扩散在燃烧攻击第一次施加元素量之后，随后的攻击挂火处于附着CD中，无法附着元素量。所以燃烧反应过后，无元素残留。如果周围存在其他敌人，对其他敌人扩散挂火为3.45*0.8的火，衰减速度为自衰减
+对于弱火+弱草触发的燃烧，甘雨重击，两次弱冰附着，总计可以消耗1.0的火和1.0的燃，原有的火元素最多仅有0.8，同理，甘雨的重击一般在燃烧攻击第一次施加元素量之后，随后的攻击挂火处于附着CD中。所以燃烧反应过后，无元素残留。
+
+### 非燃状态下的火草共存
+燃烧过程，靠“燃元素”和“草元素”共同维持。缺少任意一个燃烧立刻停止。(如果草元素消耗殆尽，燃烧消失时，燃元素会随着燃烧状态一块消失)
+如果只灭掉燃元素，就可以做到非燃状态下的草火共存。
+在燃烧状态下，加入其他元素，就可以和燃元素和火元素反应，二者共同消耗，比例为1:1。当初始触发燃烧的火元素的量大于2.0时，但燃烧仅仅产生2.0元素量的燃元素。用弱水，强雷，超强冰(4.0元素量)反应之后。
+此时可以只灭燃元素，火元素会有剩余，草元素也有剩余，即可做到“非燃状态下的火草共存”。“非燃状态下的火激共存”原理相同，需要提前打出激元素即可。
+
+### 燃烧反应的次数限制--(待定)--
+根据目前已知的现象，燃烧伤害优先受到自身的燃烧伤害。其次，才是由别人的燃烧范围伤害等额传递的伤害。
+暂定为，每0.125秒，单个目标至多受到一次燃烧伤害。通过卡时间燃烧，是可以打出双燃的操作。
+
+(0.125秒，这个时间可能不准，因为我从未打出过同类型3燃的操作，所以认为双燃是上限，猜测为0.125秒至多造成1次伤害)
+
+### 有关燃烧反应的拓展问题
+#### 燃烧+温迪火龙卷
+温迪Q期间，温迪的挂火频率较高，大于普通挂草频率。就算灭掉一个敌人的燃烧后，被其他的敌人燃烧的范围伤害重燃的燃元素，同样会马上刷新为温蒂的精通。
+即为火龙卷下，大部分的燃烧伤害吃温蒂的精通。不过“关于燃烧吃温迪精通”这一点，对最终的燃烧体系是利还是弊，我目前不做评价。
+例如对于两个敌人，结合双燃的知识。先给敌人挂草，如果先触发其中一个敌人的燃烧。另一个靠温蒂的扩散的火元素触发燃烧反应。让两个角色的燃烧伤害距离最近的两次时间差超过0.125秒。在两个敌人身上，同时出现双扩与双燃。
+现实中，其实并不好控制燃烧时间差，也不好控制敌人靠的特别近。
+
+#### 对于免疫燃烧伤害的解释
+游戏中，存在部分敌人能免疫燃烧伤害，例如火史莱姆，火斧丘丘人，火骗骗花等。
+燃烧反应会正常进行，仍然存在燃元素，以及会有燃烧攻击，有挂火，有伤害，不过这一步对于能免疫燃烧伤害的敌人来说，不能实现。但对伤害范围内其他目标单位，照常造成等额的伤害和挂火。例如角色紧贴处于燃烧状态的火骗骗花，火骗骗花能免疫燃烧伤害，但角色可以正常受到伤害和挂火
+
+#### 对于免疫燃烧反应的解释
+对于一些特殊的无相系列，免疫燃烧反应，即为对目标无法施加燃烧状态。
+
+后续有关燃烧反应的在3.0以后的正式服表现出的异常现象内容已经缩放。这种操作能打出的可能性几乎为0，没有研究必要。
+原理差不多为“在燃元素消失瞬间，补火/补草，在此瞬间，系统无法再次判定出下一次燃烧对应的燃元素”。可以参考附件中倒数第二个附件视频(视频来源外网作者：zenjury)
+我整理了一些，老版本测试燃烧出现的BUG现象，仅供参考。3.0版本以后可能不在适用或者触发的概率几乎为0
+
+## 参考链接
+泥潭的老哥是真强...
+[[玫瑰黎明攻略] 《高等元素论》3.0版本，激化，绽放，燃烧](https://bbs.nga.cn/read.php?tid=33231790)
+
+
+
 
 
 
