--- a/source/_posts/22102101.md
+++ b/source/_posts/22102101.md
@@ -1,4 +1,12 @@
-[数据讨论] [提瓦特大学]《普通破盾学》(正式版)
+---
+title: 《普通破盾学》(正式版)
+excerpt: 还是泥潭的老哥写的文章，泥潭的老哥是真强
+date: 2022-10-21
+categories:
+- 游戏
+tags:
+- 原神
+---
 
 ## 盾/甲的分类
 怪物的护盾可以大致上分为两类：无敌盾和元素装甲/护甲。无敌盾存在时，怪物本体不会受到伤害或在特定条件下可用盾牌抵挡伤害；元素装甲/护甲存在时会为怪物提供强化效果，且怪物本体仍会受到伤害。
