--- a/source/_posts/22102102.md
+++ b/source/_posts/22102102.md
@@ -176,8 +176,144 @@ R<0时，抗性对象承伤=1 - R/2
 ## 元素反应伤害的计算
 关于元素精通， 补充一点基础常识，元素精通只提高元素反应的伤害。同时元素反应分为增幅类元素反应(蒸发、融化等，提高单次伤害)、激化类元素反应(蔓激化、超激化等，提高单次伤害，与增幅反应涉及的乘区不同)，和剧变类元素反应(扩散、超载、超导、感电等，造成额外一段伤害并有一些额外效果)。同时增幅类元素反应伤害和激化类元素反应伤害是可以吃很多加成的(攻击力、暴击伤害、防御减免、抗性、伤害加成等)，剧变类元素反应的伤害只取决于：角色等级、元素精通、反应伤害提升、抗性。值得一提的是不论何种方式的元素反应，相同招式都是有内置冷却时间的，不过在这里不做详细的展开讨论。(空荧酒馆 小明明明中观察指出，更合理的说法是“不同招式元素附着有冷却时间”，造成了上述现象)
 
+### 单次增幅元素反应伤害
+![]()
+
+增幅反应总倍率=反应基础倍率*(1 + 精通提升 + 反应系数提高)
+其中反应基础倍率为固定值，比如蒸发融化。
+反应基础倍率：水火蒸发2.0，火水蒸发1.5，火冰融化2.0，冰火融化1.5.
+元素精通提升= (2.78*精通)/(精通+1400)
+反应效果提高为实际百分比(一般出现在圣遗物4件套效果里)。
+
+注：原精通提升公式为元素精通提升=K*(25/9)*精通/(精通+1401)，或许派蒙为了减少程序运算量，直接用近似数进行计算。 其中25/9≈2.78。
+
+举例：比如180精通魔女迪卢克打蒸发
+反应基础倍率(火水蒸发)为1.5
+元素精通提升= (1*2.78*180)/(180+1400)=31.67%
+魔女套提供的蒸发反应系数提高百分比为15%
+增幅反应总倍率=反应基础倍率*(1 + 精通提升 + 反应系数提高)
+增幅反应总倍率=1.5*(1+31.67%+15%)=220%
+论证过程：元素精通收益的经验公式基本确定 作者:holiverse
+[https://bbs.nga.cn/read.php?tid=23723874]
+
+在这里，我们已经讲完了上述单次增幅伤害所有乘区。
+对于单次攻击的伤害，假设其触发暴击和增幅反应，其一般的公式为
+伤害=总攻击力*伤害倍率*(1+伤害加成)*(1+暴击伤害)*反应总倍率*防御减免*抗性减免
+
+### 单次激化元素反应伤害
+![]()
+
+激化反应加成值 = 等级系数*类型系数*(1 + 精通提升 + 伤害提升提高)
+等级系数为常量，90级为1446.85
+类型系数：蔓激化1.25，超激化1.15
+精通提升 = (5×元素精通)/(元素精通+1200)
+伤害提升提高为实际百分比(一般出现在圣遗物4件套效果里)。
+激化反应加成值为基础伤害区的增加数值。
+举例：比如90级2000攻击力100精通的草元素角色打雷激化，技能倍率为100%，则基础伤害区数值为：
+  基础伤害区数值=攻击力*技能倍率+激化反应加成值
+  =2000*100%+1446.85*1.25*(1+5*100/(100+1200))
+  =4504.2
+  激化反应使得该单次伤害的基础伤害区数值由2000变成了4504.2
+激化反应伤害计算为：
+伤害=(总攻击力*伤害倍率+激化反应加成值)*(1+伤害加成)*(1+暴击伤害)*防御减免*抗性减免
+
+### 单次剧变元素反应伤害
+![]()
+
+对于剧变反应，其伤害为：
+剧变伤害=等级系数×抗性承伤×反应基础倍率×(1+精通提升+反应伤害提升)
+剧变反应的伤害计算中涉及的乘区没有防御力、伤害加成、攻击力等
+等级系数为常量，90级为1446.85。
+其中反应基础倍率以超导的两倍为基准值，比率为固定值。
+反应基础倍率：超导 0.5：扩散0.6：碎冰1.5：超载2：感电1.2：绽放2：烈绽放3：超绽放3：燃烧0.25
+精通提升= ( 16*精通 )/( 精通+2000 )
+反应伤害提升为实际百分比(一般出现在圣遗物4件套效果里)。
+妮露天赋描述中“角色触发的丰穰之核造成的伤害提升”，其本质为上述的“反应伤害提升”，与其他反应伤害提升一起加算。
+
+额外注意：圣遗物海染砗磲的效果“装备此圣遗物套装的角色对队伍中的角色进行治疗时，将产生持续3秒的海染泡沫，记录治疗的生命值回复量(包括溢出值)。持续时间结束时，海染泡沫将会爆炸，对周围的敌人造成90%累计回复量的伤害(该伤害结算方式同感电、超导等元素反应，但不受元素精通、等级或反应伤害加成效果影响”其本质为只有 奶量、抗性 两个乘区的剧变反应伤害类型结算。
+额外注意：风元素扩散反应伤害是可以触发增幅反应的，拥有额外乘区，不过在此不多赘述。详情请见个人著：《高等元素论》综述。
 
 
+**等级系数**
+![]()
+
+注：结晶盾盾值公式可以看做一个类剧变反应伤害的计算公式。
+结晶盾盾值=结晶等级系数*(1+(4.44*元素精通)/(元素精通+1400))
+注：等级系数在1.6版本进行过一次改版，随后角色造成的剧变反应都使用新参数，而怪物和环境造成的伤害仍然沿用旧参数。不过本文不对怪物伤害有过深的描述，故不着重提及。
+注：一些深渊场地会增加剧变反应伤害，该算法属于额外乘区。
+即剧变反应伤害=原剧变反应伤害*(1+深渊场地加成)
+
+举例：90级180精通魔女套香菱打10%抗性的丘丘人，打超载
+角色等级为90
+抗性减免10%，承伤90%
+超载基础倍率2.0
+元素精通提高值= 16*180/(180+2000)=132.1%
+魔女套提供的超载反应伤害提升百分比为40%
+超载反应总伤害=1446*0.9*2*(1+132.1%+40%)=7082
+资料来源： 超载、感电、扩散、超导、碎冰能打多少伤害 作者:空荧酒馆 鈴
+[https://bbs.mihoyo.com/ys/article/2215872]
+
+## 单位时间伤害 DPS (Damage Per Second)
+
+看到这里，你可能问了，白猫老师，怎么还有DPS，是不是又要加乘区？很遗憾，是的，乘区还可以更多,但是在这里只是简单描述一下其他乘区，并不会很深入的探究。
+上述都是计算单次伤害的计算，如果我们引入秒均输出(DPS)，就需要添加其他的乘区。
+
+### 时间区概述 (Time)
+
+动作的基础持续时间T (Time)
+每个角色的每个动作一般不同，一般是固定值。
+
+攻击速度S(Attack Speed)
+受到角色天赋，角色命座,武器特效影响。
+目前的测试结果倾向于攻速会减少硬直或前摇的帧，同时有数据表明似乎是乘算收益，但如果攻击动作动画不受影响，那么说明攻速加成是有上限的，并且其叠加方式也不清楚。需要更多测试，因此很多数据并没有补充完整，加强攻速的方式还是有很多的。
+(当前版本的攻速叠加上限为60%)。
+对于平A重击或CD小于施法时间的技能，其DPS计算为：
+DPS=攻击区*倍率区*增伤区*暴击区*反应区*防御区*抗性区*攻击速度
+
+从k帧开始，尝试分析原神攻速机制及其引起的“掉帧”感(更新雷泽及补充结论)
+[https://bbs.nga.cn/read.php?tid=25248484]
+
+冷却缩减 CD(Cooldown reduction)
+对于有冷却时间的技能，冷却时间缩减带来伤害的收益，其DPS计算为：
+DPS=攻击区*倍率区*增伤区*暴击区*反应区*防御区*抗性区/(T*(1-冷却缩减百分比)*之积)
+
+对于冷却缩减，原神中存在着两种冷却缩减，一种为全局冷却缩减，一种为局部冷却缩减，两种冷却缩减互为乘算。(更合理的说法是，一种冷却缩减的本质是“直接减少冷却时间”，而另一种冷却缩减是“缩短冷却时间”)
+
+举例：班尼特E CD 5s，第一天赋为E减少20%冷却，第二天赋为Q之中E减少50%冷却。
+班尼特空放E，CD为5s*(1-20%)=4s
+班尼特Q中放E，CD为5s*(1-20%)*(1-50%)=2s
+
+### 减伤区与盾值区
+除了上述乘区之外，还有减伤区和盾值区。
+
+关于减伤区数值计算的过程，现有非常有限的测试结果得出减伤区为加算，并且减伤区的数值是可以堆到或者突破100%的。在高于或等于100%时，人物受到伤害并不会跳伤害数字(剧变反应为无视伤害减免的固定伤害)。同时减伤是结算在盾值区之前的，这就是为什么有行秋的情况下，钟离的盾非常的厚。
+注：角色减伤的本质是对应的怪物的增伤区(高难活动中角色会有易伤)，此时角色减伤与怪物增伤/角色自身易伤进行加算。
+
+关于盾值区，人物承伤减去的盾值量是计算在减伤区之后的，也就是会优先计算减伤。同时护盾强效如非特殊标注，只对持有护盾强效的角色生效。如果拿一个拥有护盾强效的角色为没有护盾强效的角色套盾，如果没有特殊标注，并不会增加没有护盾强效的角色的盾值。
+举例：不考虑钟离第一天赋增加的护盾强效，如果拿着贯虹之槊，贯虹之槊自带20%护盾强效，则钟离有20%护盾强效。此时钟离给自己套盾，则护盾厚度变为120%，假如现在切城其他不带护盾强效的角色，此时护盾厚度变为100%，即护盾强效只对“自己”生效。
+
+
+### 其他伤害类型
+本文讲述的主要是角色造成的伤害类型。
+除了这种伤害之外，怪物伤害、环境伤害的类型并没有过多描述。
+除此之外，额外的伤害类型还有碰撞伤害和生命流逝，因为它们本身出现的地方不怎么常见，所以本文也并未提及。
+
+
+https://bbs.nga.cn/read.php?&tid=25564438
+
+## 最后总结
+
+看到这里，一般人都受不住了，感谢你的坚持(一般人不会看到这里)。于是我们可以总结增幅反应DPS的整合期望公式
+伤害=攻击区*倍率区*增伤区*暴击区*反应区*防御区*抗性区*时间区
+Damage=A区*M区*B区*C区*E区*D区*R区*T区
+如果我们把上述公式展开呢？
+期望DPS=((人物攻击力+武器攻击力)*(1+百分比攻击力)+固定攻击力)*(技能倍率*(1+额外乘区提升))*(1+各伤害加成数值之和)*(1+暴击率*暴击伤害)*反应基础倍率*(1+(2.78*精通)/(精通+1400)+反应系数提高)*((角色等级+100)/((1-无视防御效果)(1-防御减免效果+防御增加效果)*(怪物等级+100)+角色等级+100))*(抗性区收益[1/(1+4R) if >75%,1-R if 75%>R>0,1-R/2 if 0>R])*攻击速度
+激化反应DPS的整合期望公式：
+期望DPS=(((人物攻击力+武器攻击力)*(1+百分比攻击力)+固定攻击力)*(技能倍率*(1+额外乘区提升))+激化等级系数×类型系数×( 1+(5*精通)/(精通+1200)+ 伤害提升提高))*(1+各伤害加成数值之和)*(1+暴击率*暴击伤害)*((角色等级+100)/((1-无视防御效果)(1-防御减免效果+防御增加效果)*(怪物等级+100)+角色等级+100))*(抗性区收益[1/(1+4R) if >75%,1-R if 75%>R>0,1-R/2 if 0>R])*攻击速度
+上述公式，如果只想求单次攻击的期望，直接把时间区(攻击速度)删掉就好了。如果要求的不是期望而是单次攻击的数值，则把暴击区的(1+暴击率*暴击伤害)替换为(1+暴击伤害)
+
+## 参考链接
+[[数据讨论] [提瓦特大学]《伤害乘区论》3.1(已更新激化反应、燃烧反应等)](https://bbs.nga.cn/read.php?&tid=25564438)
 
 
 
