--- a/source/_posts/22102104.md
+++ b/source/_posts/22102104.md
@@ -86,5 +86,22 @@ tags:
 
 强调：国家队中，充能效率是最重要的。应该优先保证充能，再去追求其它的面板。
 
+### 其它事项
+大招释放频率高，可用无敌帧躲伤害班尼特大招起手，重云e和大接上。保证香菱和行秋长期吃到班尼特大招和重云e的加成。香菱大招在释放瞬间锁面板，最好在班尼特q中释放。班尼特e冷却很短，打出e后多切香菱吃能量。养了不亏，可打散进其它队伍。不存在资源浪费。
 
+## 雷神国家队
+雷神换重云，其他不用变
+### 雷神
+- 圣遗物：4绝缘
+  - 充能沙漏（武器副词条为充能效率，则带攻击沙漏）、雷伤杯、暴击/暴伤头。
+  - 副词条：双暴、充能效率、百分比攻击。
+- 武器：
+  - 五星：薙刀、薄荷枪
+  - 四星：渔获、西风
+- 天赋：拉满。
 
+### 合格面板
+攻击1400+，暴击50+，爆伤120+，充能240+
+
+### 输出手法
+雷神先手e，切班尼特qe打出超载挂火，切香菱锁面板脱手qe，此时怪物身上还是火属性残留，接着切行秋qe打出蒸发，最后切出雷神q，普攻和重击回复能量，基本这一套下来可以进行无限循环模式。
