--- a/source/_posts/22102104.md
+++ b/source/_posts/22102104.md
@@ -44,6 +44,7 @@ tags:
   - 五星：风鹰剑（高额白字，提供攻击加成）、磐岩结绿（提升生命值，确保治疗量）、天空之刃（高额的充能效率，对班尼特十分重要）
   - 四星：暗巷闪光（高额白字）、腐殖之剑（充能效率）、试作斩岩（高额白字）、西风剑（充能效率）
 - 天赋：主升q，输出流可升e。
+- 面板：充能效率200以上、血量不低于2万。
 
 ### 香菱
 - 圣遗物：4绝缘/2宗室2魔女/2宗室2乐团/2魔女2乐团/4魔女；
@@ -51,7 +52,8 @@ tags:
 - 武器
   - 五星：薙刀、天空之脊（充能效率）（护摩和璞鸢也可以，不过有些奢侈）
   - 四星：渔获、西风枪（充能效率）、千岩枪（提高伤害）、决斗枪、（宗师黑岩匣里也能带，泛用行很广）
--天赋：主升q，副升e。
+- 天赋：主升q，副升e。
+- 面板：充能150以上（多吃班尼特产的能量球）
 
 ### 重云
 - 圣遗物：2宗室2冰套/2宗室2角斗
@@ -60,6 +62,7 @@ tags:
   - 五星：天空之傲（充能效率）、狼末
   - 四星：祭礼大剑（充能效率，刷新技能）、西风大剑（充能效率）、螭骨剑、千岩古剑
 - 天赋：主升q，副升e。
+- 面板：充能150即可。
 
 ### 行秋
 - 圣遗物：4绝缘/2宗室2水套/2宗师2乐团
@@ -69,18 +72,7 @@ tags:
   - 五星：天空之刃（充能效率）（其余五星也能带，但可能不如部分四星）
   - 四星：祭礼剑（首选）、腐殖、西风
 - 天赋：q、e对点（偏重q）。
-
-### 合格面板
-
-指能在一分钟内打完12-1的上半/下半。
-
-班尼特：充能效率200以上、血量不低于2万。
-
-香菱：充能150以上（多吃班尼特产的能量球）
-
-重云：充能150即可。
-
-行秋：充能180，六命170。
+- 面板：充能180，六命170。
 
 除班尼特外，其余双暴不低于50/100，攻击力不低于1200。
 
@@ -91,6 +83,9 @@ tags:
 
 ## 雷神国家队
 雷神换重云，其他不用变
+### 命座
+0命就行
+
 ### 雷神
 - 圣遗物：4绝缘
   - 充能沙漏（武器副词条为充能效率，则带攻击沙漏）、雷伤杯、暴击/暴伤头。
@@ -99,9 +94,37 @@ tags:
   - 五星：薙刀、薄荷枪
   - 四星：渔获、西风
 - 天赋：拉满。
-
-### 合格面板
-攻击1400+，暴击50+，爆伤120+，充能240+
+- 面板：攻击1400+，暴击50+，爆伤120+，充能240+
 
 ### 输出手法
 雷神先手e，切班尼特qe打出超载挂火，切香菱锁面板脱手qe，此时怪物身上还是火属性残留，接着切行秋qe打出蒸发，最后切出雷神q，普攻和重击回复能量，基本这一套下来可以进行无限循环模式。
+
+## 雷九万班
+这套阵容比较昂贵，不建议平民玩家冲
+### 命座
+要求：雷神二命，九条六命，
+班尼特不要点六命，万叶0命
+
+### 九条
+- 圣遗物：4绝缘/4宗室
+  - 充能沙、雷伤杯、暴击/暴伤头。
+  - 副词条：双暴、充能效率、百分比攻击。
+- 武器：
+  - 五星：终末嗟叹之诗
+  - 四星：祭礼弓
+- 天赋：1 8 8。
+- 面板：充能200+，攻击1400+
+
+### 万叶
+- 圣遗物：4风
+  - 精通沙、精通杯、精通头。
+  - 副词条：精通、充能效率、百分比攻击。
+- 武器：
+  - 五星：苍古
+  - 四星：铁蜂刺（拉等级，不要精炼）
+- 天赋：1 8 8。
+- 面板：充能120+，精通800+
+
+### 输出手法
+雷神E万叶EAQ班尼特QE九条QE雷神EQA
+
