--- a/source/_posts/22110601.md
+++ b/source/_posts/22110601.md
@@ -1,1 +1,42 @@
+---
+title: 针对于学生的学习路线
+excerpt: 这篇简单对计算机专业的本科生做一下技术梳理
+date: 2022-11-06
+categories:
+- 技术文章
+tags:
+- 软实力
+---
+
+## 前言
+一切都只是基于我的个人经验以及技术积累，肯定有不到位的地方，有问题请像我提issue，谢谢！
+
+## 专业前景与发展
+现在大环境很不好，尤其是其中的计算机专业，里面的人很多，但是里面有很多人学历低，基础弱，逻辑性差；如果你能按照下文说的这些去做，我认为毕业找到一个自己喜欢的工作还是比较容易的。
+
+现在大概有三个方向：
+1. 本科毕业直接找工作
+2. 考研考博
+3. 转专业
+
+## 转专业
+先说转专业，如果说你是一点也不喜欢计算机，只是单纯调剂过来的，死活都要学别的专业，那我的建议是先学好本专业然后往外转，但是现在想转到计算机的人实在太多了，不是到要死要活的地步我还是建议继续学下去。
+如果你是想转进来，那你需要保证你在本专业为前三，最好还是理工科的专业，要做好梦回高三的打算。
+
+## 考研考博
+我个人十分不建议随波逐流的人考研，我不知道我该做什么，但是大家都考研，那我也考，这种就是单纯耽误时间，充当分母；亦或是研究生毕业出来接着做crud，要知道，这个本科生也可以，没有竞争力的。
+
+如果你对研究感兴趣，或者是说对于推动某一个方向的进步又很深的执念，这种我建议你是考研的；你需要做的是，在大一大二要好好学所有的课程，争取保研，如果说已经确定不能保研了，就要你从大二开始准备数学英语，大三确定好学校后就要开始准备专业课。
+
+## 找工作
+这个需要你好好学专业课，同时需要选择一个自己喜欢的方向，如：前端，后端，数据库，网络安全，游戏制作，策划，算法等；此中是按照推荐顺序排序的，关于学习资料的检索，我这里推荐你用哔哩哔哩进行搜索，只要你用心一定会找到的。
+
+**计算机基础一定要打好！** 同时像什么物理化学这种课可以扔一扔了，只要保证别挂科就行了。
+
+## 关于考研考博找工作推荐
+除去上文说的那些，你最好在本科加几个技术社团，如计算机博弈、acm等，其中计算机博弈名字很高大上，但是目前我校做的只是简单的if else判断，这里只能增加单纯的码代码的能力，并不能提升关于AI的能力，我希望你如果对AI感兴趣的话一定要试试这个社团，同时推动我校AI博弈的进步，同时该俱乐部投期刊会很容易，对于考研找老师有很大的帮助；acm就很单纯的是刷算法，对于增加逻辑性，以及毕业的找工作都有加分。
+
+## 关于我
+我是做前端的，同时也在给公司做nlp的模型，如果你想毕业找工作，同时对于我说的那些不知道做哪个，想直接图省事学前端，或者是喜欢前端，那你可以关注我的博客，我会在一篇文章中专门介绍前端。
+
 
