--- a/source/_posts/22110602.md
+++ b/source/_posts/22110602.md
@@ -16,8 +16,19 @@ tags:
 1. 先当一个简单的学生，多学习，做一做边边角角的事情，
 2. 做个简单的程序小白，此时你应该对计算机基础有一定的理解，html css js应该知道是个什么东西了
 3. 初级程序员
+  - 写一些简单业务，负责项目某些模块的开发，维护
+  - 遇到很多问题不知道如何处理，需要查询资料或者交流后能解决
+  - 薪资6-10，1~2年
 4. 中级程序员
-5. 高级程序员，以上这三种当你走到对应的位置上就知道要求是什么了
+  - 独立负责中小型项目，负责公司项目核心业务的开发维护
+  - 遇到大多数问题可以自行查找到解决方案，有一定的自学能力，可以通过官方文档自学
+  - 代码质量较高，遵循代码规范，并会对组内其他人的代码有要求
+  - 10-20，2~4年
+5. 高级程序员
+  - 独立负责中大型项目，可以为公司项目搭建框架，创建内部脚手架，维护公司内部UI框架
+  - 可以读懂框架源码，并可以从开源框架中借鉴优秀的设计，架构，思想
+  - 公司的核心员工，具备不可替代性，成为公司技术不可或缺的一部分
+  - 20-50,4~6年
 
 ## 管理路线
 1. 部门主管
@@ -30,8 +41,16 @@ tags:
 2. 不建议这条路，现在倒闭暴雷的特别多
 
 ## 技术路线
-1. 架构师、系统分析师
-2. 技术总监，CTO
+1. 架构师
+  - 对大型项目进行系统架构，不再局限于某个领域或者某项技术
+  - 对技术领域现有技术方案进行评估，对不同的场景给出对应的解决方案
+  - 确定项目最终方案，并且对整个项目进行核心架构
+  - 保证项目各个环节的有序进行，包括项目的高性能，高可用，可扩展能力。
+1. 资深技术专家
+  - 专注某一特定领域，如前端的框架源码，node，js引擎进行定制化需求优化
+  - 可以主导公司项目某些特定领域技术的落地，类似流媒体，即时通信技术等。
+  - 在某些行业内有一定的影响力，是某一块技术领域的top任务。
+3. 技术总监，CTO
 
 
 
