--- a/source/_posts/22110603.md
+++ b/source/_posts/22110603.md
@@ -11,4 +11,43 @@ tags:
 ## 前言
 我不保证会全，如果你有什么建议请给我提issue，同时此文章是完全包含需求的，不适合你着急找工作，如果你着急找工作可以优先看目录中带 * 的文章
 
-## 
+## 互联网
+网络原理
+
+## 浏览器
+浏览器运行原理
+
+## html
+
+## css
+
+## js
+
+## Git
+
+## node
+
+## 构建工具
+
+## css预处理
+
+## js框架
+
+## css优化
+
+## 测试
+
+## 代码质量
+
+## 性能
+
+## 数据可视化
+
+## 服务端渲染
+
+## 桌面应用
+
+## 静态站点构建
+
+
+
