--- a/source/_posts/22102104.md
+++ b/source/_posts/22102104.md
@@ -27,7 +27,7 @@ tags:
 
 关键命座解读：
 
-班尼特一命：生命百分比低于70时，大招仍提供攻击力加成，提高全队伤害。
+班尼特一命：生命百分比低于80时，大招仍提供攻击力加成，提高全队伤害。
 
 香菱四命：大招持续时间延长百分之40，保证大招不断，进行持续输出。
 
@@ -42,7 +42,7 @@ tags:
   - 充能沙、生命杯、治疗头；副词条：生命百分比、充能效率、双暴优先。
 - 武器
   - 五星：风鹰剑（高额白字，提供攻击加成）、磐岩结绿（提升生命值，确保治疗量）、天空之刃（高额的充能效率，对班尼特十分重要）
-  - 四星：暗巷闪光（高额白字）、腐殖之剑（充能效率）、试作斩岩（高额白字）、西风剑（充能效率）
+  - 四星：原木刀，暗巷闪光（高额白字）、腐殖之剑（充能效率）、试作斩岩（高额白字）、西风剑（充能效率）
 - 天赋：主升q，输出流可升e。
 - 面板：充能效率200以上、血量不低于2万。
 
@@ -67,7 +67,7 @@ tags:
 ### 行秋
 - 圣遗物：4绝缘/2宗室2水套/2宗师2乐团
   - 充能沙漏（武器副词条为充能效率，则带攻击沙漏）、水伤杯、暴击/暴伤头。
-  - 副词条：双暴、百分比攻击、充能效率、精通优先。
+  - 副词条：双暴、百分比攻击、充能效率优先。
 - 武器：
   - 五星：天空之刃（充能效率）（其余五星也能带，但可能不如部分四星）
   - 四星：祭礼剑（首选）、腐殖、西风
