--- a/source/_posts/22111101.md
+++ b/source/_posts/22111101.md
@@ -1,4 +1,12 @@
-# 修改element-UI 中el-table数据空白提示
+---
+title: 修改element-UI 中el-table数据空白提示
+excerpt: 如题目
+date: 2022-11-11
+categories:
+- 技术文章
+tags:
+- vue
+---
 
 ## 前言
 element-ui 中的el-table组件在没有数据时，会默认显示暂无数据。
