--- a/source/_posts/22111102.md
+++ b/source/_posts/22111102.md
@@ -1,4 +1,12 @@
-# elementUI 的 table 表格改变数据不更新问题
+---
+title: elementUI 的 table 表格改变数据不更新问题
+excerpt: 如题目
+date: 2022-11-11
+categories:
+- 技术文章
+tags:
+- vue
+---
 
 ## 需求
 el-table一个格子里面鼠标移上去会出现编辑的按钮，点击的时候格子直接变成input，修改完了直接刷新表格。
