--- a/source/_posts/22110601.md
+++ b/source/_posts/22110601.md
@@ -36,6 +36,17 @@ tags:
 ## 关于考研考博找工作推荐
 除去上文说的那些，你最好在本科加几个技术社团，如计算机博弈、acm等，其中计算机博弈名字很高大上，但是目前我校做的只是简单的if else判断，这里只能增加单纯的码代码的能力，并不能提升关于AI的能力，我希望你如果对AI感兴趣的话一定要试试这个社团，同时推动我校AI博弈的进步，同时该俱乐部投期刊会很容易，对于考研找老师有很大的帮助；acm就很单纯的是刷算法，对于增加逻辑性，以及毕业的找工作都有加分。
 
+## 在上大学前需要准备什么
+1. 计算机基础
+2. 数学
+3. 英语
+
+以上是按照顺序排序，同时不做强制要求，推荐几个计算机基础好的课与书：
+- [哈佛大学CS50X 2022最新版本 计算机入门课](https://www.bilibili.com/video/BV1ER4y157uA)
+- 网络原理
+- 组成原理
+- [编码：隐匿在计算机软硬件背后的语言](https://awesome-programming-books.github.io/computer-system/%E7%BC%96%E7%A0%81%EF%BC%9A%E9%9A%90%E5%8C%BF%E5%9C%A8%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BD%AF%E7%A1%AC%E4%BB%B6%E8%83%8C%E5%90%8E%E7%9A%84%E8%AF%AD%E8%A8%80.pdf)
+
 ## 关于我
 我是做前端的，同时也在给公司做nlp的模型，如果你想毕业找工作，同时对于我说的那些不知道做哪个，想直接图省事学前端，或者是喜欢前端，那你可以关注我的博客，我会在一篇文章中专门介绍前端。
 
