--- a/source/_posts/22110603.md
+++ b/source/_posts/22110603.md
@@ -11,6 +11,9 @@ tags:
 ## 前言
 我不保证会全，如果你有什么建议请给我提issue，同时此文章是完全包含需求的，不适合你着急找工作，如果你着急找工作可以优先看目录中带 * 的文章
 
+## 发展规划
+[针对于前端的职业发展规划](https://shuangxunian.github.io/2022/11/06/22110602/)
+
 ## 互联网
 网络原理
 
