--- a/source/_posts/22111601.md
+++ b/source/_posts/22111601.md
@@ -1,4 +1,14 @@
-vue表单 循环生成校验， 自定义校验规则，手动触发某条校验规则
+---
+title: element表单校验
+excerpt: 一个需求
+date: 2022-11-16
+categories:
+- 技术文章
+tags:
+- vue
+- element
+---
+
 
 ## 普通校验（具体直接看前端框架的官方文档就好了）
 ```javascript
