--- a/source/_posts/22112501.md
+++ b/source/_posts/22112501.md
@@ -26,3 +26,100 @@ tags:
 1. 点击依赖
 2. 点击右上角安装依赖，在运行依赖中输入axios
 3. 选择第一个，点击安装
+
+## 删除多余配置
+1. 点击任务
+2. 点击serve，点击运行
+3. 运行成功后点击启动app
+4. 打开app.vue文件，代码替换
+  ```vue
+  <template>
+    <div id="app">
+
+    </div>
+  </template>
+
+  <script>
+  export default {
+    name: 'app'
+  }
+  </script>
+
+  <style>
+  #app {}
+  </style>
+  ```
+5. 打开router下的index.js文件，代码替换
+  ```javascript
+  import Vue from 'vue'
+  import VueRouter from 'vue-router'
+
+  Vue.use(VueRouter)
+
+  const routes = [
+
+  ]
+
+  const router = new VueRouter({
+    routes
+  })
+
+  export default router
+  ```
+6. 删除整个views文件
+7. 删除components下的helloworld文件
+
+## 创建文件
+1. 在components新建一个自己需要的vue文件，代码替换
+  ```vue
+  <template>
+    <div></div>
+  </template>
+
+  <script>
+  export default {
+
+  }
+  </script>
+
+  <style lang="less" scoped>
+
+  </style>
+  ```
+2. 在router下面的index.js将组件进行关联，其中MyBoard是我的组件的名称，这里需要替换成你自己的：
+  ```javascript
+  import Vue from 'vue'
+  import VueRouter from 'vue-router'
+  import MyBoard from '../components/MyBoard.vue'
+
+  Vue.use(VueRouter)
+
+  const routes = [
+    { path: '/myboard', component: MyBoard }
+  ]
+
+  const router = new VueRouter({
+    routes
+  })
+
+  export default router
+
+  ```
+3. 在app.vue中填入路由占位符
+  ```vue
+  <template>
+    <div id="app">
+      <router-view></router-view>
+    </div>
+  </template>
+
+  <script>
+  export default {
+    name: 'app'
+  }
+  </script>
+
+  <style>
+  #app {}
+  </style>
+  ```
