--- a/source/_posts/22112501.md
+++ b/source/_posts/22112501.md
@@ -123,3 +123,10 @@ tags:
   #app {}
   </style>
   ```
+  
+  ## 安装less
+  1. 在vue ui界面，点击依赖
+  2. 点击右上角安装依赖，在开发依赖中输入less-loader
+  3. 选择第一个，点击安装
+  4. 继续点击右上角安装依赖，在开发依赖中输入less
+  5. 选择第一个，点击安装
