--- a/source/_posts/22112501.md
+++ b/source/_posts/22112501.md
@@ -124,9 +124,24 @@ tags:
   </style>
   ```
   
-  ## 安装less
-  1. 在vue ui界面，点击依赖
-  2. 点击右上角安装依赖，在开发依赖中输入less-loader
-  3. 选择第一个，点击安装
-  4. 继续点击右上角安装依赖，在开发依赖中输入less
-  5. 选择第一个，点击安装
+## 安装less
+1. 在vue ui界面，点击依赖
+2. 点击右上角安装依赖，在开发依赖中输入less-loader
+3. 选择第一个，点击安装
+4. 继续点击右上角安装依赖，在开发依赖中输入less
+5. 选择第一个，点击安装
+
+## 修改默认样式
+1. 打开代码文件，选择assets
+2. 在此文件夹下新建css文件夹
+3. 在css文件夹下新建globel.css文件
+4. 写入代码
+  ```css
+  html, body, #app {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  ```
+5. 在main.js中引入此文件`import './assets/css/global.css'`
+
