--- a/source/_posts/22112401.md
+++ b/source/_posts/22112401.md
@@ -22,6 +22,13 @@ tags:
   - `copy(document.cookie.replace('smid',''))`
 5. 添加机器人好友，并且直接按ctrl+v，发送内容即可
 
+### 绑定抽卡记录
+windows电脑，进入抽卡记录页面，多翻几页，然后按win+r键，将以下代码粘贴到输入框里：
+
+`powershell iex(irm 'https://lelaer.com/d.ps1')`
+
+待提示成功后，直接私聊Ctrl+v发送即可
+
 ### 更新面板
 ![](https://api2.mubu.com/v3/document_image/8620839b-6609-414a-8867-8cd1b03f7cda-3807603.jpg)
 
