--- a/source/_posts/22120201.md
+++ b/source/_posts/22120201.md
@@ -1,4 +1,12 @@
-## 学前准备
+---
+title: 学前准备
+excerpt: 前端学习前需要做的准备
+date: 2022-12-02
+categories:
+- 技术文章
+tags:
+- 软实力
+---
 
 ## 电脑方面
 前端学习对于电脑要求真不高，只需要4-6k，大厂的电脑就可以了；但是如果你现在已经马上要工作，或者转行到前端，亦或是只想学习不想打游戏的学生，建议购买最新款的 MacBook Pro，如果你又想打游戏又想学习，**一定不要**购买MacBook Pro，高价位的话：神舟、外星人、拯救者都可以；至于具体型号，可[点此](https://search.bilibili.com/all?keyword=%E5%A4%A7%E5%AD%A6%E7%94%9F+%E7%AC%94%E8%AE%B0%E6%9C%AC%E6%8E%A8%E8%8D%90)；只需要看现在这一年的视频即可。
