--- a/source/_posts/22120201.md
+++ b/source/_posts/22120201.md
@@ -14,6 +14,7 @@ tags:
 我的配置：
 - 笔记本：MacBook Pro 2020 M1 16 + 512
 - 台式：i5-12700kf 3070ti 16 + 1tsdd + 2t机械
+
 这配置满足任何开发需求（22年），仅供参考
 
 
@@ -21,7 +22,9 @@ tags:
 必须：
 - [vscode](https://code.visualstudio.com/)
   - 免费便捷，插件多
-  - 必要的插件
+  - 必要的插件：
+   1. `chinese` 中文转换
+   2. `Live Server` 给本地文件启服务，用法就是在文件右键，点击`open with live server`
 - [Chrome](https://www.google.com/chrome/)
   - 必备的浏览器
 - [MarkTest](https://github.com/marktext/marktext)
