--- a/source/_posts/22120201.md
+++ b/source/_posts/22120201.md
@@ -22,13 +22,13 @@ tags:
 必须：
 - [vscode](https://code.visualstudio.com/)
   - 免费便捷，插件多
-  - 必要的插件：
-   1. `chinese` 中文转换
-   2. `Live Server` 给本地文件启服务，用法就是在文件右键，点击`open with live server`
+  - 详细使用[点此]()
 - [Chrome](https://www.google.com/chrome/)
   - 必备的浏览器
 - [MarkTest](https://github.com/marktext/marktext)
   - 开源的markdown编辑器，学会书写md文档也是成为开发的重要一环
+
+
 推荐：
 - [幕布](https://mubu.com/inv/3807603)
   - 一款分条记录的软件，用了好多年了
