--- a/source/_posts/22112501.md
+++ b/source/_posts/22112501.md
@@ -8,6 +8,9 @@ tags:
 - vue
 ---
 
+## 直接clone
+如果你不想自己手动创建，可以直接[点此](https://github.com/shuangxunian/vue-template)，但是我建议你至少自己创建过一次项目，再直接clone。
+
 ## 创建项目
 1. 任意路径启动vue ui`vue ui`
 2. 点击创建按钮，并选择路径，选好后点击在此创建
