--- a/source/_posts/22120501.md
+++ b/source/_posts/22120501.md
@@ -1,4 +1,13 @@
-# 我的第一份前端代码
+---
+title: 第一份前端代码
+excerpt: 开始写代码！
+date: 2022-12-05
+categories:
+- 技术文章
+tags:
+- html
+- 前端系列课程文章
+---
 
 ## 第一份前端代码
 1. 鼠标右键，新建txt文件，将以下代码复制粘贴到记事本中
