--- a/source/_posts/22120601.md
+++ b/source/_posts/22120601.md
@@ -171,4 +171,10 @@ eg:
 ```
 
 ## 总结
+如果你是刚开始学习前端，上文涉及到的知识点只做了解，待你学完一遍前端后请再回头看，会有新的理解。
 
+## 参考链接
+[HTML meta标签总结与属性使用介绍](https://segmentfault.com/a/1190000004279791)
+[meta viewport 是做什么用的，怎么写？](https://zhuanlan.zhihu.com/p/405097694)
+[http面试必会的：强制缓存和协商缓存](https://juejin.cn/post/6844903838768431118)
+[<meta>：文档级元数据元素](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/meta)
