--- a/source/_posts/22120601.md
+++ b/source/_posts/22120601.md
@@ -1,3 +1,13 @@
+---
+title: `<meta>`：文档级元数据元素
+excerpt: 关于 meta 元素的解释
+date: 2022-12-06
+categories:
+- 技术文章
+tags:
+- html
+- 前端系列课程文章
+---
 
 ## 用处
 meta常用于定义页面的说明，关键字，最后修改日期，和其它的元数据。这些元数据将服务于浏览器（如何布局或重载页面），搜索引擎和其它网络服务。
