--- a/source/_posts/22120502.md
+++ b/source/_posts/22120502.md
@@ -38,7 +38,7 @@ tags:
 ### 元信息元素`<meta>`
 用于描述数据的数据。它不会显示在页面上，但是机器却可以识别；常用于定义页面的说明，关键字，最后修改日期，和其它的元数据。这些元数据将服务于浏览器（如何布局或重载页面），搜索引擎和其它网络服务。
 
-关于详解请[点此]()
+关于详解请[点此](https://shuangxunian.github.io/2022/12/06/22120601/)
 
 ### 页面主体元素`<body>`
 `<body></body>` — `<body>` 元素。该元素包含期望让用户在访问页面时看到的内容，包括文本、图像、视频、游戏、可播放的音轨或其他内容。
