--- a/source/_posts/22120801.md
+++ b/source/_posts/22120801.md
@@ -234,3 +234,4 @@ DNS（Domain Name System，域名系统），因特网上作为域名和IP地址
 
 ## 参考链接
 [【原】老生常谈-从输入url到页面展示到底发生了什么](https://www.cnblogs.com/xianyulaodi/p/6547807.html)
+[DNS域名服务原理](https://www.jianshu.com/p/71511874f17c)
