--- a/source/_posts/22110603.md
+++ b/source/_posts/22110603.md
@@ -21,7 +21,7 @@ tags:
 ## html
 * [第一份前端代码](https://shuangxunian.github.io/2022/12/05/22120501/)
 * [了解元素](https://shuangxunian.github.io/2022/12/05/22120502/)
-* [<meta>：文档级元数据元素](https://shuangxunian.github.io/2022/12/06/22120601/)
+* [`<meta>`：文档级元数据元素](https://shuangxunian.github.io/2022/12/06/22120601/)
 
 ## css
 
