--- a/source/_posts/22121901.md
+++ b/source/_posts/22121901.md
@@ -1,6 +1,6 @@
 ---
 title: 元素的属性以及嵌套
-excerpt: 
+excerpt: 本篇讲一下元素的属性以及嵌套
 date: 2022-12-05
 categories:
 - 技术文章
@@ -38,7 +38,19 @@ eg：
 
 这些不需要特意去背，后续的不断学习就能记住了。
 
+## 嵌套
+我们可以从代码结构里面发现，代码呈这样：
+```html
+<body>
+  <h1 class="h1css">h1标签</h1>
+  <p class="h1css">p标签</p>
+  <h2 class="h2css">h2标签</h2>
+</body>
+```
+
+一组代码在另外一组的里面，这个就是html代码的格式，这里只需要了解一下即可。
+
 
 ## 关联
-[code](https://github.com/shuangxunian/teaching-FE/blob/main/1/1.html)
+[code](https://github.com/shuangxunian/teaching-FE/blob/main/1/3.html)
 [视频](https://space.bilibili.com/391117803)
