--- a/source/_posts/22110603.md
+++ b/source/_posts/22110603.md
@@ -9,7 +9,7 @@ tags:
 ---
 
 ## 前言
-我不保证会全，如果你有什么建议请给我提issue，同时此文章是完全包含需求的，不适合你着急找工作，如果你着急找工作可以优先看目录中带 * 的文章，同时需要注意的是，我是按照顺序排列的，如果你按照顺序学习觉得有哪里无法理解，也请给我发邮件，我会及时回复你的~
+我不保证会全，如果你有什么建议请给我提issue，同时此文章是完全包含需求的，不适合你着急找工作，同时需要注意的是，我是按照顺序排列的，如果你按照顺序学习觉得有哪里无法理解，也请给我发邮件，我会及时回复你的~
 
 ## 发展规划
 [针对于前端的职业发展规划](https://shuangxunian.github.io/2022/11/06/22110602/)
@@ -19,9 +19,11 @@ tags:
 [vscode准备](https://shuangxunian.github.io/2022/12/02/22120202/)
 
 ## html
-* [第一份前端代码](https://shuangxunian.github.io/2022/12/05/22120501/)
-* [了解元素](https://shuangxunian.github.io/2022/12/05/22120502/)
-* [&lt;meta&gt;：文档级元数据元素](https://shuangxunian.github.io/2022/12/06/22120601/)
+[第一份前端代码](https://shuangxunian.github.io/2022/12/05/22120501/)
+[了解元素](https://shuangxunian.github.io/2022/12/05/22120502/)
+[元素的属性以及嵌套](https://shuangxunian.github.io/2022/12/19/22121901/)
+[关于注释](https://shuangxunian.github.io/2022/12/19/22121902/)
+[&lt;meta&gt;：文档级元数据元素](https://shuangxunian.github.io/2022/12/06/22120601/)
 
 ## css
 
