--- a/source/_posts/22121902.md
+++ b/source/_posts/22121902.md
@@ -9,8 +9,24 @@ tags:
 - 前端系列课程文章
 ---
 
-## body
+## 快捷键
+按住`Ctrl + / `，如果是mac则是`Command + /`。
+
+## 为什么要写注释
+1. 业务逻辑
+我们在开发中不可避免的会为需求做一些妥协，如奇怪的判断等，这时候我们需要写清楚为什么当这个变量等于这个值的时候走下边的函数。
+2. 算法
+当我们需要用算法去解决一个业务的时候，我们务必对该算法写尽注释，越细越好——你甚至可以在内网写一篇文章去解释这个算法的每一步，方便后续接手的人能极快的理解你的意图。
+3. 非常规写法
+非常规的写法就是反模式、反套路的，有时候甚至会违反程序员的直觉。像这些做法，必须在注释中写明这样实现的原因。
+4. 可能有坑却暂时没太好解决办法
+有些时候，需求出的够难够复杂，时间上催的又很急，你根本没办法马上想到特别好的办法去实现。这里需要做个标记，写明原因，然后等基础需求都实现后，再像大家寻求帮助。
+5. 关于项目核心的接口、类和字段
+做项目的时候，需求中的很多核心概念很可能会被映射到对应的接口或者实体类上，如果在这些核心接口和实体类加上清楚的注释，写明对应的业务概念，那么，后面再维护项目的时候，真的是事半功倍。如果特定概念是复合的，是由多个小概念构成，却必须用一个接口或者一个类来表示，那很可能实现上，就还得用字段去映射这些小概念，那么这些字段也得加上注释说明起对应的概念。
+6. 后续迭代优化
+我们在开发中发现哪里需求不合理，需要继续添加新的功能，但是评审时没有留意到，这时需要写TODO，以提醒自己后续进行添加。
+
+这里完全可以说一句暴论：如果你做不到好好写注释，不会写好注释，你是注定不能成为一个优秀、让人喜欢的程序员的。
 
 ## 关联
-[code](https://github.com/shuangxunian/teaching-FE/blob/main/1/1.html)
 [视频](https://space.bilibili.com/391117803)
