--- a/source/_posts/22122401.md
+++ b/source/_posts/22122401.md
@@ -74,13 +74,20 @@ author_description: 一个喜欢算法的小前端
 editedArticle:
   enable: true
   repo: https://github.com/shuangxunianTest/shuangxunianTest.github.io
-``
+```
+
+点击`commit changes`，然后再点击code，点击`themes/kaze`，点击`layout`，点击`post.ejs`，点击右上角的铅笔，将第19行的`server`改成`main`。
 
 点击`commit changes`，然后点击action，等待`pages build and deployment`出现绿钩。
 
 然后回到你的博客，点击刷新，你会发现所有需要改变的东西都换成自己的信息了。
 
-然后我们测试一下，点击`关于markdown的基础语法`，点击编辑原文
+然后我们测试一下，点击`关于markdown的基础语法`，点击编辑原文，然后随便在末尾加点东西，然后点击`commit changes`。点击action，可以正常运行，等待`pages build and deployment`出现绿钩，在回到原页面，刷新文档，发现自己的内容已经出现在页面上。
+
+恭喜你，你的博客部署成功！
+
+## 强调
+这里的代码、内容所有人可见，一定不要发涉及到自己隐私的内容。
 
 
 
