--- a/source/_posts/22110603.md
+++ b/source/_posts/22110603.md
@@ -15,6 +15,8 @@ tags:
 [针对于前端的职业发展规划](https://shuangxunian.github.io/2022/11/06/22110602/)
 
 ## 前期准备
+[github简易建站](https://shuangxunian.github.io/2022/12/24/22122401/)
+[关于markdown的基础语法](https://shuangxunian.github.io/2022/12/29/22122901/)
 [学前准备](https://shuangxunian.github.io/2022/12/02/22120201/)
 [vscode准备](https://shuangxunian.github.io/2022/12/02/22120202/)
 
