--- a/source/_posts/22120201.md
+++ b/source/_posts/22120201.md
@@ -22,7 +22,7 @@ tags:
 必须：
 - [vscode](https://code.visualstudio.com/)
   - 免费便捷，插件多
-  - 详细使用[点此]()
+  - 详细使用[点此](https://shuangxunian.github.io/2022/12/02/22120202/)
 - [Chrome](https://www.google.com/chrome/)
   - 必备的浏览器
 - [MarkTest](https://github.com/marktext/marktext)
